# no-name-engine

./: CMakeLists.txt  README.md  main.cpp
src/engine/: engine.cpp  engine.h
src/engine/base/: component.h  entity.h  entity_handle.cpp  entity_handle.h  scene.cpp  scene.h
src/engine/base/components/: node_component.cpp  node_component.h  transform.h
src/engine/base/managers/: camera_manager.h  component_manager.h  scene_attachment_manager.cpp  scene_attachment_manager.h
src/engine/base/systems/: camera_system.cpp  camera_system.h  component_system.cpp  component_system.h  entity_system.h
src/engine/debug/: debug_helper.h
src/events/: event_manager.h
src/physics/: physics_world.cpp  physics_world.h
src/window/: window.h  window_glfw.cpp  window_glfw.h
src/window/shaders/: fragment.frag  vert.spv  vertex.vert
